--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.73MB/s(Youtube:不良林), server: in-tw-1.iivvppnn.info, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-1.iivvppnn.info}}
-  - {name: 🇯🇵 日本-3.13MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.76MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-3.24MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: 6f48efb9-3817-4652-832f-fd04d93ebbc1, sni: v5.tgfaka.com, skip-cert-verify: true}
   - {name: 🇯🇵 日本-354.9KB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇯🇵 日本-233.6KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 未知国家-1.12MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
-  - {name: 🇨🇳 中国-4.83MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-344.4KB/s(Youtube:不良林), server: lc-hk03-direct01.lc-hk03.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk03-direct01.lc-hk03.lc-node.com}}
-  - {name: 🇦🇺 澳大利亚-2.04MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-310.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇸🇬 新加坡-697.2KB/s(Youtube:不良林), server: sg1.xz88.ml, port: 12464, type: vmess, uuid: 09a62e54-0f74-4002-8d45-5fe63e4bf2a2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇬🇧 英国-2.87MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-233.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-344.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-233.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-344.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-233.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-344.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-344.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-233.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-344.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-233.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-344.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-233.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-344.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.73MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
       - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-233.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.71MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-344.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
