--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.76MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-3.24MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: 6f48efb9-3817-4652-832f-fd04d93ebbc1, sni: v5.tgfaka.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-354.9KB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-310.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇸🇬 新加坡-697.2KB/s(Youtube:不良林), server: sg1.xz88.ml, port: 12464, type: vmess, uuid: 09a62e54-0f74-4002-8d45-5fe63e4bf2a2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-913.9KB/s(Youtube:不良林), server: su4.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su4.chaoxn.top}}
+  - {name: 🇸🇬 新加坡-2.99MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.01MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 34.72img.xyz, port: 443, type: vmess, uuid: b605dc8f-249f-4f08-9793-571acf746dab, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.72img.xyz}}
+  - {name: 🇯🇵 日本-677.7KB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
   - {name: 🇬🇧 英国-2.87MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-393.3KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65038, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
