--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-913.9KB/s(Youtube:不良林), server: su4.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su4.chaoxn.top}}
-  - {name: 🇸🇬 新加坡-2.99MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 未知国家-1.00MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇯🇵 日本-3.38MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇭🇰 香港-614.9KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
+  - {name: 🇯🇵 日本-152.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-3.01MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 34.72img.xyz, port: 443, type: vmess, uuid: b605dc8f-249f-4f08-9793-571acf746dab, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.72img.xyz}}
-  - {name: 🇯🇵 日本-677.7KB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇬🇧 英国-2.87MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-393.3KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65038, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇨🇳 中国-6.43MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.64MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 捷克-359.5KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 未知国家-1.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 捷克-359.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 未知国家-1.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 捷克-359.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 未知国家-1.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 捷克-359.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 未知国家-1.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 捷克-359.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 未知国家-1.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 捷克-359.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 未知国家-1.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 捷克-359.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-913.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
+      - 未知国家-1.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-677.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 捷克-359.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
