--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 未知国家-1.00MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
-  - {name: 🇯🇵 日本-3.38MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇭🇰 香港-614.9KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
-  - {name: 🇯🇵 日本-152.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-3.01MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-6.43MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.27MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.13MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: shared.sev7en.cc, port: 20821, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
   - {name: 🇸🇬 新加坡-1.64MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 捷克-359.5KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
   - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 未知国家-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
-      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
       - 捷克-359.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 未知国家-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
-      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
       - 捷克-359.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,20 +53,19 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 未知国家-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
-      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
       - 捷克-359.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -74,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 未知国家-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
-      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
       - 捷克-359.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 未知国家-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
-      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
       - 捷克-359.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 未知国家-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
-      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
       - 捷克-359.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 未知国家-1.00MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.38MB/s(Youtube:不良林)
-      - 🇭🇰 香港-614.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-152.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
       - 捷克-359.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-486.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
